refactor: adjust HTML-formatting according to rule 3.1 in html-and-css.md(rename only id what not break down scripts)

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   </head>
 
   <body>
-    <div class="aaa">
+    <div class="eisenhower-matrix">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
+    <div class="item-menu">
+      <p id="item-add-heading"><label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
